# MLP

./: .gitignore  CMakeLists.txt  README.md  cargar_csv.cpp  cargar_csv.h  main.cpp  mlp.cpp  mlp.h  vectores.csv
config/: experimentos.ipynb  lista.txt  main.ipynb  metricas.csv  modificar_datos.ipynb  ver_graficos.ipynb
data/: pesos_capa_0.csv  pesos_capa_1.csv  sesgo_capa_0.csv  sesgo_capa_1.csv
data/C1_100_R/: C1_100_R.csv  indicaciones.txt  perdidas.csv  pesos_capa_0.csv  pesos_capa_1.csv  sesgo_capa_0.csv  sesgo_capa_1.csv
data/C1_100_R_C2_200_R/: C1_100_R_C2_200_R.csv  perdidas.csv  pesos_capa_0.csv  pesos_capa_1.csv  pesos_capa_2.csv  sesgo_capa_0.csv  sesgo_capa_1.csv  sesgo_capa_2.csv
data/C1_100_R_C2_200_R_C3_50_R/: C1_100_R_C2_200_R_C3_50_R.csv  perdidas.csv  pesos_capa_0.csv  pesos_capa_1.csv  pesos_capa_2.csv  pesos_capa_3.csv  sesgo_capa_0.csv  sesgo_capa_1.csv  sesgo_capa_2.csv  sesgo_capa_3.csv
data/C1_100_R_C2_50_R/: C1_100_R_C2_50_R.csv  perdidas.csv  pesos_capa_0.csv  pesos_capa_1.csv  pesos_capa_2.csv  sesgo_capa_0.csv  sesgo_capa_1.csv  sesgo_capa_2.csv
data/C1_100_R_C2_50_R_C3_200_R/: C1_100_R_C2_50_R_C3_200_R.csv  pesos_capa_2.csv  sesgo_capa_1.csv
data/C1_100_S/: C1_100_S.csv  perdidas.csv  pesos_capa_0.csv  pesos_capa_1.csv  sesgo_capa_0.csv  sesgo_capa_1.csv
data/C1_100_S_C2_200_S/: C1_100_S_C2_200_S.csv  perdidas.csv  (+6 more)
include/: capa.h  cargar_csv.h  mlp.h
lib/: capa.cpp  cargar_csv.cpp  mlp.cpp
res/: datos.csv  testing.csv
src/: main.cpp
util/: IA_P3_preprocessing.ipynb  informe.ipynb  perdidas.tex  tabla.tex
(+324 files in other folders)
